--- a/package.json
+++ b/package.json
@@ -17,13 +17,22 @@
   },
   "homepage": "https://github.com/AverageHelper/node-lazy-array#readme",
   "scripts": {
-    "build": "rm -rf dist && tsc",
-    "test": "jest"
+    "build": "rm -rf dist && tsc --project tsconfig.prod.json",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "main": "dist/index.js",
-  "dependencies": {},
+  "dependencies": {
+    "source-map-support": "^0.5.19"
+  },
   "devDependencies": {
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.31",
+    "@types/source-map-support": "^0.5.3",
     "jest": "^26.6.3",
+    "jest-environment-node": "^26.6.2",
+    "jest-extended": "^0.11.5",
+    "ts-jest": "^26.5.2",
     "typescript": "^4.2.2"
   }
 }
