--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/AverageHelper/node-lazy-sequence#readme",
   "scripts": {
+    "lint": "eslint . --ext .ts",
     "build": "rm -rf dist && tsc --project tsconfig.prod.json",
     "test": "jest",
     "test:watch": "jest --watch"
@@ -29,9 +30,17 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
     "@types/source-map-support": "^0.5.3",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-jest": "^24.1.5",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
     "jest-environment-node": "^26.6.2",
     "jest-extended": "^0.11.5",
+    "prettier": "^2.2.1",
     "ts-jest": "^26.5.2",
     "typescript": "^4.2.2"
   }
