--- a/package.json
+++ b/package.json
@@ -18,11 +18,17 @@
   "homepage": "https://github.com/AverageHelper/node-lazy-sequence#readme",
   "scripts": {
     "lint": "eslint . --ext .ts",
-    "build": "rm -rf dist && tsc --project tsconfig.prod.json",
+    "build": "rm -rf dist && tsc -p tsconfig.prod.json && tsc -p tsconfig-cjs.json",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "prepublishOnly": "npm run build"
   },
-  "main": "dist/index.js",
+  "exports": "./dist/esm/index.js",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "files": [
+    "dist/"
+  ],
   "dependencies": {
     "source-map-support": "^0.5.19"
   },
