Add performance tests, and a README disclaimer

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,15 +1,15 @@
 {
-  "projects": [
-    {
-      "displayName": "src:node",
-      "clearMocks": true,
-      "preset": "ts-jest",
-      "setupFilesAfterEnv": ["jest-extended"],
-      "testEnvironment": "node",
-      "testPathIgnorePatterns": ["/node_modules/"],
-      "testRegex": ["src/.*\\.test\\.(t|j)sx?$"]
+  "clearMocks": true,
+  "preset": "ts-jest",
+  "setupFilesAfterEnv": ["jest-extended"],
+  "testEnvironment": "node",
+  "testPathIgnorePatterns": ["/node_modules/"],
+  "testRegex": ["src/.*\\.test\\.(t|j)sx?$"],
+  "globals": {
+    "ts-jest": {
+      "tsconfig": "./tsconfig.test.json"
     }
-  ],
+  },
   "collectCoverage": true,
   "collectCoverageFrom": ["src/**/*!(.d)!(.test).ts"],
   "coverageDirectory": "coverage",
